first version of a working mp4. result is corrupt and space color has errors but no segmentation fault is wrong

--- a/plugins/screenshot/CMakeLists.txt
+++ b/plugins/screenshot/CMakeLists.txt
@@ -9,5 +9,5 @@ build_veyon_plugin(screenshot
 	screenshot.qrc
 )
 
-TARGET_LINK_LIBRARIES(screenshot -lavformat -lavcodec -lavutil)
+TARGET_LINK_LIBRARIES(screenshot -lavformat -lavcodec -lavutil -lswscale)
 
