code refactored form screenshot feature to the new record feature. Since I did it without development IDE some compilation error could arise

--- a/plugins/record/CMakeLists.txt
+++ b/plugins/record/CMakeLists.txt
@@ -5,3 +5,5 @@ build_veyon_plugin(record
 	RecordFeaturePlugin.h
 	record.qrc
 )
+
+TARGET_LINK_LIBRARIES(record -lavformat -lavcodec -lavutil -lswscale)
