--- a/plugins/record/CMakeLists.txt
+++ b/plugins/record/CMakeLists.txt
@@ -1,5 +1,8 @@
 INCLUDE(BuildVeyonPlugin)
 
+find_path( AVCODEC_INCLUDE_DIR libavcodec/avcodec.h )
+find_library( AVCODEC_LIBRARY avcodec )
+
 build_veyon_plugin(record
 	RecordFeaturePlugin.cpp
 	RecordFeaturePlugin.h
